Fixed overlap between img and title on posts

--- a/style.css
+++ b/style.css
@@ -32,3 +32,6 @@ p {
   position: absolute;
 }
 
+.post-title{
+  margin-top: 15px;
+}
